<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WanAndroid</string>

    <string name="main_tab">首页</string>
    <string name="tree_tab">体系</string>
    <string name="news_tab">新鲜</string>
    <string name="message_tab">消息</string>
    <string name="life_tab">我的</string>
    <string name="rank">排名 :</string>
    <string name="id">ID :</string>
    <string name="level">等级 :</string>
    <string name="app_fenger">本APP由Fenger开发</string>
    <string name="welcome">欢迎使用</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="to_register">去注册</string>
    <string name="to_login">去登录</string>
    <string name="enter_username">请输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="my_points">我的积分</string>
    <string name="my_collect">我的收藏</string>
    <string name="about_me">关于作者</string>
    <string name="system_settings">系统设置</string>
</resources>