<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_blur"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_260"
        android:background="@color/blue"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/rl_user_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_260">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/civ_user_icon"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_80"
            android:background="@color/white"
            android:scaleType="centerCrop"
            tools:src="@drawable/pager_image1"
            app:riv_corner_radius="@dimen/dp_80"
            app:riv_mutate_background="true" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/civ_user_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22"
            tools:text="FENGER" />

        <LinearLayout
            android:id="@+id/ll_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_5"
            android:alpha="0.8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"
                tools:text="123456" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user_level_ranking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_user_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:alpha="0.8">

            <LinearLayout
                android:id="@+id/ll_user_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/tv_user_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12"
                    tools:text="15" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_user_ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/tv_user_ranking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12"
                    tools:text="1221" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/rl_user_info">

        <LinearLayout
            android:id="@+id/ll_coin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bg_press_color_surface"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16">

            <ImageView
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_action_like"
                app:tint="@color/blue"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/my_points"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/red"
                android:textSize="@dimen/sp_12"
                tools:text="520" />

            <ImageView
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_13"
                android:rotation="180"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_next"
                app:tint="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_collect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bg_press_color_surface"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16">

            <ImageView
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_action_like"
                app:tint="@color/blue" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/my_collect"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15" />

            <ImageView
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_13"
                android:rotation="180"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_next"
                app:tint="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_about_me"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bg_press_color_surface"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16">

            <ImageView
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_action_like"
                app:tint="@color/blue" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/about_me"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15" />

            <ImageView
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_13"
                android:rotation="180"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_next"
                app:tint="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bg_press_color_surface"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16">

            <ImageView
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_action_like"
                app:tint="@color/blue" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/system_settings"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15" />

            <ImageView
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_13"
                android:rotation="180"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_next"
                app:tint="@color/gray" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>